[#82719] styles: plots: Fix cut off label

--- a/src/styles/plots.scss
+++ b/src/styles/plots.scss
@@ -34,6 +34,8 @@ d3fc-group {
         color: $axis-color;
         font-weight: 600;
         font-size: 14px;
+        line-height: 18px;
+        width: fit-content !important;
     }
 
     .plot-area {
